# agentgate

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
docs/: qq-setup.md
src/agentgate/: commands.py  config.py  gateway.py  main.py  parser.py  render.py  response.py  security.py  segment_handlers.py  session.py  types.py
src/agentgate/agents/: base.py  claude_code.py
