[project]
name = "agentgate"
version = "0.1.0"
description = "Gateway bridging chat platforms to interactive CLI agents"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
dependencies = [
    "aiohttp>=3.9",
    "linkify-it-py>=2.1.0",
    "markdown-it-py>=4.0.0",
    "mdit-py-plugins>=0.5.0",
    "playwright>=1.58.0",
    "pygments>=2.20.0",
    "pyyaml>=6.0",
]

[project.scripts]
agentgate = "agentgate.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentgate"]
